# ArenaGuide2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Pipfile  Procfile  README.md  netlify.toml  pyproject.toml  pytest.ini  refactor.py  refactor2.py  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  main.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  context_engine.py  crowd.py  llm.py  routing.py  stadium_data.py
app/static/: app.js  index.html  style.css
netlify/functions/: api.py  stadium.mts
src/: __init__.py  config.py  logging_conf.py  main.py
src/data/: crowd.json  facilities.json
src/models/: __init__.py  api_models.py  schemas.py
src/services/: ai_client.py  crowd.py  pathfinder.py  phrasing.py  rules_engine.py  security.py  stadium_data.py
src/static/: app.js  index.html  style.css
tests/: conftest.py  test_ai_client.py  test_api.py  test_api_models.py  test_context_engine.py  test_crowd.py  test_llm.py  test_pathfinder.py  test_phrasing.py  test_routing.py  test_rules_engine.py  test_schemas.py  test_security.py  test_stadium_data.py  test_static.py  test_venue_manager.py
