[project]
name = "stadiummate"
version = "1.0.0"
description = "Multilingual, accessible stadium assistant for FIFA World Cup 2026."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions, simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# Long localized template strings and CSP header read better on one line.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # google.generativeai is imported lazily / optionally
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["app"]
